--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-csv": "^2.2.2",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
+    "react-dropdown-select": "^4.10.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
