--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_APP_BACKEND_URL = https://inventory-management-system-backend.onrender.com
-# VITE_APP_BACKEND_URL = http://localhost:8000/api
+VITE_APP_BACKEND_URL = https://inventory-management-system-backend.onrender.com/pi
+VITE_APP_BACKEND_URL = http://localhost:8000/api
